--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
     "dev:server": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.21.2",
     "express": "^4.17.1",
     "ts-node-dev": "^1.0.0-pre.51"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "eslint": "^7.4.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
     "typescript": "^3.9.6"
   }
 }
