--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,7 +2,13 @@
   "type": "postgres",
   "host": "localhost",
   "port": 5432,
-  "username": "docker",
+  "username": "postgres",
   "password": "docker",
-  "database": "gobarber"
+  "database": "go_barber",
+  "migrations": [
+    "./src/database/migrations/*.ts"
+  ],
+  "cli": {
+    "migrationsDir": "./src/database/migrations"
+  }
 }
