--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
+    "date-fns": "^2.14.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.21.2",
     "express": "^4.17.1",
     "pg": "^8.3.0",
     "ts-node-dev": "^1.0.0-pre.51",
-    "typeorm": "^0.2.25"
+    "typeorm": "^0.2.25",
+    "uuidv4": "^6.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
